--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #333;
+  background-color: dodgerblue;
   color: white;
   display: flex;
   justify-content: center;
